--- a/day01/Cargo.toml
+++ b/day01/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "day01"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+criterion = "0.5.1"
+rand = "0.8.5"
+
+[[bench]]
+name = "task2"
+harness = false
