--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 criterion = "0.5.1"
 rand = "0.8.5"
 regex = "1.11.1"
+strum = "0.26.3"
+strum_macros = "0.26.4"
 
 [[bin]]
 name = "day01"
